# wizardmirror

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  build.zig  build.zig.zon  config.example.json  massif.out.1219473  memcheck.sh  wizardmirror.sh
.devcontainer/: Dockerfile  devcontainer.json
.zig-cache/o/010bf92ce881db84a3a1cfb176e6e0c4/: wizardmirror
.zig-cache/o/1806b4001f5a425d336c5c2b900be0f0/: wizardmirror
.zig-cache/o/1ebc317e8c1e489d01d88ee15b0b5c1c/: wizardmirror
.zig-cache/o/24c3089d99b2772d496cbf8507441533/: wizardmirror
.zig-cache/o/2b8cb3aab22e6380396e9da9ec64e82f/: wizardmirror
.zig-cache/o/321642f09ddd627ffdb6b97cf60b64bf/: wizardmirror
.zig-cache/o/548d012c4335d50e3dc302bd5c6a597d/: wizardmirror
.zig-cache/o/874b6a6c012b5594c8716d9806340040/: cimport.h.d
.zig-cache/o/890564af8f0fd64204f367073ee5d275/: cimport.zig
.zig-cache/o/9ab8f6f943407d1d615c23cabed0aa42/: wizardmirror
include/components/: headlines.h  headlines.hpp
include/tetrahedron/: component.h  component.hpp  lifecycle.h  lifecycle.hpp
src/: main.cpp  main.zig
src/components/: bg.zig  headlines.cpp  headlines.zig  lib.zig  news_headlines.zig  root.zig  test_polymorphism.zig  welcome.zig
src/engine/: component.zig  error.zig  errors.zig  font.zig  http.zig  layout.zig  lib.zig  lifecycle.zig  log.zig  state.zig
src/engine/widget/: box.zig  lib.zig  (+2 more)
src/service/: config.zig  root.zig  rss.zig
src/tetrahedron/: component.cpp  component.zig  errors.h  font.zig  http.zig  layout.zig  lifecycle.cpp  lifecycle.h  lifecycle.zig  module.cppm  root.zig  state.zig
(+11 files in other folders)
